charts/sonatype-nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      securityContext:
        fsGroup: 200
      nodeSelector:
        stable: "true"
      volumes:
        - name: nexus-data-pv
          persistentVolumeClaim:
            claimName: nexus-data-pvc
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
#          resources:
#            limits:
#              memory: "2Gi"
#              cpu: "500m"
#            requests:
#              memory: "1Gi"
#              cpu: "250m"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data-pv
              mountPath: /nexus-data
            - name: nexus-data-pv
              mountPath: /opt/sonatype/sonatype-work/nexus3
