charts/sonatype-nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  rules:
    - host: nexus.mkve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  nexus-service
                port:
                  number: 8081
  tls:
    - secretName: nexus-tls
      hosts:
        - nexus.mkve.ru
